[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/color_palette.gd" type="Script" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://nyan/spritesheet.tex" type="Texture" id=3]
[ext_resource path="res://nyan/nyan-attack.anm" type="Animation" id=4]
[ext_resource path="res://nyan/nyan-block.anm" type="Animation" id=5]
[ext_resource path="res://nyan/nyan-idle.anm" type="Animation" id=6]
[ext_resource path="res://fonts/apartNES.fnt" type="BitmapFont" id=7]
[ext_resource path="res://scripts/drake.gd" type="Script" id=8]
[ext_resource path="res://drake/drake.tex" type="Texture" id=9]
[ext_resource path="res://drake/drake-down.anm" type="Animation" id=10]
[ext_resource path="res://drake/drake-fire.anm" type="Animation" id=11]
[ext_resource path="res://drake/drake-fly.anm" type="Animation" id=12]
[ext_resource path="res://drake/drake-up.anm" type="Animation" id=13]
[ext_resource path="res://scripts/HitLabel.gd" type="Script" id=14]
[ext_resource path="res://misc/showhit.anm" type="Animation" id=15]
[ext_resource path="res://misc/background.tex" type="Texture" id=16]

[node name="BattleScene" type="Node"]

[node name="Color Palette" type="Node" parent="."]

script/script = ExtResource( 1 )
color_1 = Color( 0.87451, 0.968627, 0.823529, 1 )
color_2 = Color( 0.545098, 0.745098, 0.454902, 1 )
color_3 = Color( 0.2, 0.403922, 0.317647, 1 )
color_4 = Color( 0.180392, 0.270588, 0.231373, 1 )

[node name="Player" type="Node" parent="."]

script/script = ExtResource( 2 )
life = 2350
idle = Vector2( 0, 0 )
tap = Vector2( 2, 2 )
hold = Vector2( 4, 4 )
hold_time = 30
block_wait = 30
force = 64

[node name="Sprite" type="Sprite" parent="Player"]

transform/pos = Vector2( 65, 200 )
z/z = 1
texture = ExtResource( 3 )
vframes = 12
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Sprite"]

playback/process_mode = 0
playback/default_blend_time = 0.01
root/root = NodePath("..")
anims/nyan-attack = ExtResource( 4 )
anims/nyan-block = ExtResource( 5 )
anims/nyan-idle = ExtResource( 6 )
next/nyan-block = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="Player"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 250.0
margin/right = 209.0
margin/bottom = 285.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "Battle!"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Life" type="Label" parent="Player"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = -10.0
margin/right = 211.0
margin/bottom = 25.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "Life"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Drake" type="Node" parent="."]

script/script = ExtResource( 8 )
life = 4560
idle_count = 3
tail_count = 1
fireball_count = 1
bite_count = 1
tail_force = 250
fireball_force = 200
bite_force = 300

[node name="Sprite" type="Sprite" parent="Drake"]

visibility/light_mask = 32769
transform/pos = Vector2( 200.432, 141.99 )
texture = ExtResource( 9 )
vframes = 4
hframes = 4
region_rect = Rect2( 392, 241, 1, 1 )
__meta__ = { "_edit_lock_":true }

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drake/Sprite"]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/drake-down = ExtResource( 10 )
anims/drake-fire = ExtResource( 11 )
anims/drake-fly = ExtResource( 12 )
anims/drake-up = ExtResource( 13 )
next/drake-down = ""
next/drake-fire = ""
next/drake-up = ""
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Life" type="Label" parent="Drake"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 250.0
margin/right = 201.0
margin/bottom = 285.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
text = "Life"
align = 2
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hit" type="Label" parent="Drake"]

editor/display_folded = true
visibility/opacity = 0.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 120.0
margin/right = 157.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.180392, 0.270588, 0.231373, 1 )
custom_colors/font_color_shadow = Color( 0.87451, 0.968627, 0.823529, 1 )
custom_constants/shadow_as_outline = 1
text = "Hit"
valign = 1
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 14 )
anim_node = "AnimationPlayer"
animation = "show-hit"
prefix = "hit"
sulffix = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drake/Hit"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show-hit = ExtResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Background" type="Node" parent="."]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Background"]

transform/pos = Vector2( 160, 144 )
z/z = -1
texture = ExtResource( 16 )
__meta__ = { "_edit_lock_":true }

[connection signal="on_attacked" from="Player" to="Player" method="_on_Player_on_attacked"]

[connection signal="on_dead" from="Player" to="Player" method="_on_Player_on_dead"]

[connection signal="on_win" from="Player" to="Player" method="_on_Player_on_win"]

[connection signal="on_attacked" from="Drake" to="Drake" method="_on_Drake_on_attacked"]

[connection signal="on_dead" from="Drake" to="Drake" method="_on_Drake_on_dead"]


